hphp/test/zend/good/Zend/tests/magic_by_ref_004.php.expectf

Fatal error: Method test::__unset() cannot take arguments by reference in %s/magic_by_ref_004.php on line 4
